[gd_scene load_steps=3 format=3 uid="uid://b8rvqr4mhy23s"]

[ext_resource type="FontFile" uid="uid://caymmx2pqsuqc" path="res://assets/fonts/TypeLightSans-KV84p.otf" id="1_aeu7d"]
[ext_resource type="Script" uid="uid://n7tbdg8ymxc4" path="res://scripts/level_selector.gd" id="1_gkmvm"]

[node name="LevelSelector" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1154.0
offset_bottom = 649.0
script = ExtResource("1_gkmvm")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1147.0
offset_bottom = 648.0
color = Color(0, 0.160784, 0.313726, 1)

[node name="Level1Button" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 185.0
offset_right = 378.0
offset_bottom = 316.0
theme_override_fonts/font = ExtResource("1_aeu7d")
theme_override_font_sizes/font_size = 50
text = "Level 1"

[node name="Level2Button" type="Button" parent="."]
layout_mode = 0
offset_left = 417.0
offset_top = 184.0
offset_right = 745.0
offset_bottom = 315.0
theme_override_fonts/font = ExtResource("1_aeu7d")
theme_override_font_sizes/font_size = 50
text = "Level 2"

[node name="Level3Button" type="Button" parent="."]
layout_mode = 0
offset_left = 781.0
offset_top = 182.0
offset_right = 1109.0
offset_bottom = 313.0
theme_override_fonts/font = ExtResource("1_aeu7d")
theme_override_font_sizes/font_size = 50
text = "Level 3"

[node name="Level4Button" type="Button" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 354.0
offset_right = 379.0
offset_bottom = 485.0
theme_override_fonts/font = ExtResource("1_aeu7d")
theme_override_font_sizes/font_size = 50
text = "Level 4"

[node name="Level5Button" type="Button" parent="."]
layout_mode = 0
offset_left = 411.0
offset_top = 352.0
offset_right = 739.0
offset_bottom = 483.0
theme_override_fonts/font = ExtResource("1_aeu7d")
theme_override_font_sizes/font_size = 50
text = "Level 5"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 291.0
offset_top = 58.0
offset_right = 876.0
offset_bottom = 149.0
theme_override_fonts/font = ExtResource("1_aeu7d")
theme_override_font_sizes/font_size = 90
text = "Lorentz Quest"

[connection signal="pressed" from="Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="Level4Button" to="." method="_on_level_4_button_pressed"]
[connection signal="pressed" from="Level5Button" to="." method="_on_level_5_button_pressed"]
